--- a/css/site.css
+++ b/css/site.css
@@ -3,10 +3,16 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+#quiz {
+  margin: 20px 0;
+  min-height: 200px;
+}
+
 .btn-container {
   text-align: center;
 }
-.btn-info, .btn-warning {
+
+#prev, #next, #start {
   display: none;
 }
 
@@ -14,7 +20,9 @@ ul li{
   list-style: none;
 }
 
-.choices input[type=radio]{
+input[type=radio]{
   margin-right: 10px;
 }
+
+h5 {color: #985f0d};
 
